fixed subheading spacing across all pages

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,10 +44,12 @@ body {
   margin-bottom: 40px;
 }
 
-.container {
+.subheading {
+  display: flex;
+  flex-direction: column;
+  margin: auto; 
   align-items: center;
-    display: flex;
-    flex-direction: column;
+  max-width: 920px;
 }
 
 a {
@@ -126,6 +128,12 @@ h1 {
 
 h3 {
   color: #ebe264;
+}
+
+h4 {
+  display: flex;
+  flex-direction: column;
+  margin: auto; 
 }
 
 h5 {
